# etl-101-data-wash

./: .gitignore  README.md  main.py  pyproject.toml
app/: extract.py  load.py  transform.py
