[tool.poetry]
name = "etl-101-data-wash"
version = "1.0"
description = ""
authors = ["Aline Silveira <aline@outlook.ie>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
