[tool.poetry]
name = "etl-101-data-wash"
version = "1.0"
description = ""
authors = ["Aline Silveira <aline@outlook.ie>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.10"}
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
